# cobol_parser

./: .gitignore  .gitmodules  Cargo.toml  README.md  setup-grammar.sh  virt.sh
benches/: parser_benchmark.rs
examples/: analyze_errors.rs  check_193.rs  check_cols.rs  check_cols_td1.rs  check_error_lines.rs  check_line193.rs  check_preprocessing.rs  check_trfvtd1.rs  check_trfvtel.rs  compare_extract.rs  compare_preprocessing.rs  compare_start.rs  count_all_errors.rs  count_clean.rs  debug_marker.rs  debug_normalize.rs  debug_paragraphs.rs  debug_preprocess.rs  debug_single_errors.rs  debug_strip.rs  debug_tree.rs  debug_tree_file.rs  detailed_errors.rs  dump_kinds.rs  find_culprit.rs  find_cutoff.rs  find_error.rs  find_first_error.rs  find_td1_issue.rs  find_trfvtd1_error.rs  fix_sources.rs  line_counts.rs  parse_partial.rs  parse_program.rs  show_all_errors.rs  show_error_nodes.rs  show_normalized.rs  test_actual.rs  test_actual2.rs  test_author.rs  (+15 more)
sources/: zipit.sh
sources/cpy/: 626JTC.cpy  ACMN.cpy  ACNT.cpy  ACRO.cpy  ASCMWS.cpy  BLKB.cpy  CUPF.cpy  EXCB.cpy  FIL3090.cpy  FIL3900.cpy  GERTE.cpy  GPISTPSW.cpy  GSDTS.cpy  GTAG.cpy  ISLCAVQ.cpy  ISLSAVQ.cpy  LOGG.cpy  MASNOSTRO.cpy  NMVR.cpy  NSTP.cpy  OBCD.cpy  OECD.cpy  SWIFTMER.cpy  TFS202V.cpy  TFSAPLPA.cpy  TFSBANK.cpy  TFSBNKAC.cpy  TFSBNKET.cpy  TFSCLSYS.cpy  TFSCNTRY.cpy  TFSGSYSPA.cpy  TFSSPTL.cpy  TFSSPTPL.cpy  TFSSTPL.cpy  TRFELDA.cpy  TRFLDA.cpy  UFIMIJ.cpy  UFIMIJCON.cpy  VBAC.cpy  VBACU.cpy  (+26 more)
sources/ddl/: TFSCLSYS.ddl  TFSICLCA2.ddl  (+3 more)
src/: copybook.rs  lib.rs  main.rs  model.rs  preprocessor.rs
(+41 files in other folders)
